# krunner-uptime

./: .gitignore  CMakeLists.txt  LICENSE  README.md  krunner_uptime.cpp  krunner_uptime.h  krunner_uptime.json  postinst
.github/workflows/: ci.yaml
